--- a/personalSite/templates/contactme.html
+++ b/personalSite/templates/contactme.html
@@ -79,7 +79,7 @@ Contact Me
     <div class="details">
         <div class="user-data">
             <img src="{{ url_for('static', filename='mail.png') }}" alt="Mail">
-            <a href="mail.google.com" target="_blank"><p>venkadeshdeveloper@gmail.com</p></a>
+            <a href="mail.google.com" target="_blank"><p>sreevenkadesh004@gmail.com</p></a>
         </div>
         <div class="user-data">
             <img src="{{ url_for('static', filename='github.png') }}" alt="Github">
