--- a/personalSite/templates/base.html
+++ b/personalSite/templates/base.html
@@ -152,7 +152,6 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/#about-me">About me</a></li>
-                <li><a href="/blogs">Blogs</a></li>
                 <li><a href="/acheivements">Achievements</a></li>
                 <li><a href="/contact-me">Contact me</a></li>
             </ul>
@@ -164,7 +163,7 @@
         <div class="media">
             <a href="https://twitter.com/SVenkadesh004" target="_blank"><img src="{{ url_for('static', filename='twitter.png') }}" alt=""></a>
             <a href="https://www.linkedin.com/in/venkadeshs/" target="_blank"><img src="{{ url_for('static', filename='linkedin.png') }}" alt=""></a>
-            <a href="https://www.instagram.com/venkadesh_developer/" target="_blank"><img src="{{ url_for('static', filename='instagram.png') }}" alt=""></a>
+            <a href="https://www.instagram.com/venkadesh_s_06/" target="_blank"><img src="{{ url_for('static', filename='instagram.png') }}" alt=""></a>
         </div>
         <script>
             body = document.getElementById('body');
