--- a/personalSite/templates/contactme.html
+++ b/personalSite/templates/contactme.html
@@ -91,7 +91,7 @@ Contact Me
         </div>
         <div class="user-data">
             <img src="{{ url_for('static', filename='instagram.png') }}" alt="Instagram">
-            <a href="https://www.instagram.com/venkadesh_developer" target="_blank"><p>venkadesh_developer</p></a>
+            <a href="https://www.instagram.com/venkadesh_s_06" target="_blank"><p>venkadesh_s_06</p></a>
         </div>
         <div class="user-data">
             <img src="{{ url_for('static', filename='linkedin.png') }}" alt="Linkedin">
