--- a/personalSite/templates/home.html
+++ b/personalSite/templates/home.html
@@ -210,10 +210,7 @@ Home
 <section id="about-me">
     <div class="about-me-content">
         <h1>About Me</h1>
-        <p>A learning mindset with an unbreakable consistency will break the walls put forward by the world before them. Our mothers make us eat while showing the brightness of the moon in the silent dark, and now I proclaim that if we see the brightness in ourselves we can fill the world with a louder brightness. I see and think about the stars every time. when I get depressed because we can learn one thing by seeing them every time, they glow in the dark. I am a fellow who is interested in seeking the mysteries of the objects in the deepest and the darkest playgrounds.
-            <br>I got in love with computers in 3rd grade when my family bought the first desktop pc in my home. I was just astonished to see the fast-moving pages on the pc. I thought of them as a book that had several pages and they move fast. And when I grew up, I got to understand the magicians behind this magic, “The programmers”.  As soon as I got to know about the profession I was eager to make myself into it. At present, I am doing my Bachelor’s in computer science and engineering from a reputed institution. 
-            <br>The love that I have for computers, and the beautiful dark space above me make me unsleepable and push me to find the real passion that I have. 
-            <br><span>A passion hunter in an ocean.</span></p>
+        <p>Hello I am Venkadesh. I am a Final year student at Thiagarajar College of Engineering in the Department of Computer Science Engineering. I was interested in the Development domain when entering college, so I started learning Web and Mobile App Development. I use MERN stack for my Web applications and Flutter Framework for my Mobile Applications. I have also explored other Domains like Machine Learning, and IOT where I developed various projects and participated in Hackathons related to these fields. I am a highly motivated and consistent individual with a strong work ethic. My career goal is to work in a challenging and rewarding environment where I can use my skills and knowledge to make a positive impact.</p>
     </div>
     <div class="qualifications-content">
         <h1>My Qualifications:</h1>
@@ -227,7 +224,7 @@ Home
             <img src="{{ url_for('static', filename='tce.png') }}" alt="">
             <p>Doing my Bachelor’s Degree in Computer Science and Engineering 
                 <br>Thiagarajar College Of Engineering
-                <br>2019-2021</p>
+                <br>2021-2025</p>
         </div>
     </div>
 </section>
